app/assets/stylesheets/sidebar.scss
.sidebar {
  height: 100%;
  width: 75px;
  position: fixed;
  z-index: 5;
  top: 0;
  left: 0;
  background-color: #484c65;
  padding-top: 20px;
  overflow: hidden;
  font-size: 10px;
  margin: auto;
}

.sidebar {
  margin: auto;
  text-align: center;
}

.button-list {
  padding: 20px 0px;
}

.sidebar > bottom {
  bottom: 80px;
}

.button-list div {
  color: white;
  display: block;
  height: 30px;
  width: 30px;
  margin: 10px auto;
  padding: 10px;
  cursor: pointer;
  transition: background-color 1s ease;
  border-radius: 10%
}

.button-list div:hover {
  color: white;
  background-color: #333649;
}

.button-list a {
  text-decoration: none;
}

// .new-note-btn {
//   background-image: image-url("sidebar_buttons/newnote.png");
// }
//
// .new-note-btn:hover {
//   background-image: image-url("sidebar_buttons/newnote_hover.png");
// }

.new-meeting-btn {
  background-image: image-url("sidebar_buttons/meeting_note.png");
}

.new-meeting-btn:hover {
  background-image: image-url("sidebar_buttons/meeting_note_hover.png");
}

// .search-btn {
//   background-image: image-url("sidebar_buttons/search.png");
// }
//
// .search-btn:hover {
//   background-image: image-url("sidebar_buttons/search_hover.png");
// }

.workchat-btn {
  background-image: image-url("sidebar_buttons/workchat.png");
}

.workchat-btn:hover {
  background-image: image-url("sidebar_buttons/workchat_hover.png");
}

// .shortcuts-btn {
//   background-image: image-url("sidebar_buttons/shortcuts.png");
// }
//
// .shortcuts-btn:hover {
//   background-image: image-url("sidebar_buttons/shortcuts_hover.png");
// }

// .notes-btn {
//   background-image: image-url("sidebar_buttons/notes.png");
// }
//
// .notes-btn:hover {
//   background-image: image-url("sidebar_buttons/notes_hover.png");
// }

// .notebooks-btn {
//   background-image: image-url("sidebar_buttons/notebook.png");
// }
//
// .notebooks-btn:hover {
//   background-image: image-url("sidebar_buttons/notebook_hover.png");
// }

.tags-btn {
  background-image: image-url("sidebar_buttons/tags.png");
}

.tags-btn:hover {
  background-image: image-url("sidebar_buttons/tags_hover.png");
}

.logout {
  background-image: image-url("sidebar_buttons/logout.png");
}

.github-btn, .linkedin, .profile-site {
  width: 55%;
  height: auto;
  margin: 20px 0px;
  fill: #1cba5f;
}

.sidebar-bottom {
  width: 60px;
}

.profile-site{
  width: 40px;
}

